@@ -1,3 +1,5 @@
+- drop support for /etc/urpmi/media.d/*.cfg
+  (was partially broken, non documented and hopefully unused)
 - only load LDAP binding if needed (saves a couple MB in rpmdrake)
 
 Version 6.21 - 13 January 2009
